# choose_your_own_adventure

backend/: README.md  database.db  main.py  pyproject.toml
backend/core/: config.py  models.py  story_generator.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py
